# AutoNewsVideo

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  test.py
autovideo/: autovideo.py  config.py  html_to_image.py  llm_client.py  tts_generator.py  video_generator.py
templates/: news_item.html  overview.html
